2010-08-17   Romain Francois <romain@r-enthusiasts.com>

	* inst/include/RcppArmadilloWrap.h : extracted from RcppArmadillo.h

	* inst/include/RcppArmadilloSugar.h : preliminary code to more interoperability
	between Rcpp sugar and armadillo. Defines the Rcpp::forward that allows
	forwarding the result of a sugar expression so that it is used in a Mat
	constructor. (needs more testing)
	
	* inst/unitTests/runit.RcppArmadillo.R : initial test for sugar/armadillo

2010-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* Upgraded to Armadillo 0.9.60 "Killer Bush Turkey" with changes:
	  - More flexible reshape(), allowing significantly different
	    matrix sizes
	  - Added matrix initialisation via the << operator
	  - Fixes for compilation issues under Mac OS X with GCC 4.2/4.0
	    hybrid

2010-08-03   Romain Francois <romain@r-enthusiasts.com>

	* Upgraded to Armadillo 0.9.58 beta for testing purposes

        * inst/include/armadillo: Reworked so that armadillo_bits/
	  directory can be included as is without minor tweaks to
	  armadillo_bits/config.hpp

2010-07-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.4

	* inst/include/armadillo_bits: Added small patch to not use asinh,
	acosh and atanh on win32 as the (older) MinGW compiler cannot cope.
	This problem will go away once R 2.12 is released as it requires
	gcc / g++ 4.5.

2010-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/* : upgrade to armadillo 0.9.52 "Monkey Wrench"

	* src/fastLm.cpp: Switch from inv() (which now throws a warning on
	(near) singular matrices and returns an empty matrix) to the
	Moore-Penrose pseudo-inverse pinv() which allows us to continue
	the example from the manual page. Of course, for standard use inv() is
	doing the right thing by issueing the warning.

2010-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Release 0.2.3

2010-06-14   Romain Francois <romain@r-enthusiasts.com>
